<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/navigation_info"-->
<!--        android:visible="false"-->
<!--        android:title="@string/basic_info" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_run"-->
<!--        android:visible="false"-->
<!--        android:icon="@drawable/ic_main_solid"-->
<!--        android:title="@string/run" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_setting"-->
<!--        android:visible="false"-->
<!--        android:icon="@drawable/ic_gear_solid"-->
<!--        android:title="@string/setting" />-->

    <item
        android:id="@+id/navigation_use_mode"
        android:icon="@drawable/ic_main_solid"
        android:title="@string/use_mode_fragment_title"
        />
    <item
        android:id="@+id/navigation_mode_run"
        android:icon="@drawable/ic_main_solid"
        android:title="@string/mode_run_fragment_title"
        />
    <item
        android:id="@+id/navigation_running"
        android:icon="@drawable/ic_main_solid"
        android:title="@string/running_fragment_title"
        />
    <item
        android:id="@+id/navigation_signup"
        android:icon="@drawable/ic_main_solid"
        android:title="@string/signup_fragment_title"
        />
</menu>