<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialog_box_left_margin"
            android:layout_marginEnd="@dimen/dialog_box_right_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dialog_rect_top_white"
                    android:padding="@dimen/dialog_content_padding">
                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/dialog_privacy_title"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/dialog_txt_size_big"
                        android:textStyle="bold" />
                </RelativeLayout>
                <WebView
                    android:id="@+id/webview"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dialog_gray_section"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/allSee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dialog_content_padding"
                    android:layout_gravity="end"
                    android:layout_marginTop="14dp"
                    android:text="@string/all_see"
                    android:textColor="@color/light_gray_text"
                    android:textSize="@dimen/dialog_txt_size_small" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/dialog_content_padding"
                    android:layout_marginTop="@dimen/dialog_content_padding"
                    >
                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:minHeight="0dp"
                        android:minWidth="0dp"
                        android:buttonTint="@color/primary"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_privacy_agreement"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:textSize="@dimen/dialog_txt_size_small"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/dialog_content_padding"
                    android:layout_marginBottom="@dimen/dialog_content_padding"
                    >
                    <CheckBox
                        android:id="@+id/checkbox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:minHeight="0dp"
                        android:minWidth="0dp"
                        android:buttonTint="@color/primary"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fourteen_over"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:textSize="@dimen/dialog_txt_size_small"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_rect_bottom_white"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <TextView
                    android:id="@+id/text_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_left"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dialog_btn_txt_size"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/dialog_bottom_btn_margin"
                    android:layout_marginTop="@dimen/dialog_bottom_btn_margin"
                    android:layout_marginBottom="@dimen/dialog_bottom_btn_margin"
                    />
                <TextView
                    android:id="@+id/text_ok"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_right"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dialog_btn_txt_size"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/dialog_bottom_btn_margin"
                    android:layout_marginTop="@dimen/dialog_bottom_btn_margin"
                    android:layout_marginBottom="@dimen/dialog_bottom_btn_margin"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
