<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialog_box_left_margin"
            android:layout_marginEnd="@dimen/dialog_box_right_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dialog_rect_top_white"
                    android:padding="@dimen/dialog_content_padding">
                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/dialog_permission_title"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/dialog_txt_size_big"
                        android:textStyle="bold" />
                    <ImageView
                        android:id="@+id/bleMode"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/bluetooth_icon"
                        android:layout_alignParentEnd="true"
                        />
                </RelativeLayout>
                <TextView
                    android:id="@+id/text_content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="start"
                    android:lineSpacingExtra="8sp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dialog_txt_size_medium"
                    android:paddingStart="@dimen/dialog_content_padding"
                    android:paddingEnd="@dimen/dialog_content_padding"
                    android:paddingBottom="@dimen/dialog_content_padding"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dialog_gray_section"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dialog_content_padding"
                    android:layout_marginTop="@dimen/dialog_content_padding"
                    android:layout_marginBottom="@dimen/dialog_content_padding"
                    >
                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:buttonTint="@color/primary"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_permission_agreement"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:textSize="@dimen/dialog_txt_size_small"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_rect_bottom_white"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <TextView
                    android:id="@+id/text_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_left"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dialog_btn_txt_size"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/dialog_bottom_btn_margin"
                    android:layout_marginTop="@dimen/dialog_bottom_btn_margin"
                    android:layout_marginBottom="@dimen/dialog_bottom_btn_margin"
                    />
                <TextView
                    android:id="@+id/text_ok"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_right"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dialog_btn_txt_size"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/dialog_bottom_btn_margin"
                    android:layout_marginTop="@dimen/dialog_bottom_btn_margin"
                    android:layout_marginBottom="@dimen/dialog_bottom_btn_margin"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
